<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/BtnGenerateKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/btn_generate_keys" />

    <Button
        android:id="@+id/BtnShareKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtnGenerateKeys"
        android:layout_below="@+id/BtnGenerateKeys"
        android:layout_marginTop="22dp"
        android:text="@string/btn_share_key" />

    <EditText
        android:id="@+id/InputRecipientNum"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BtnShareKey"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/BtnShareKey"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/input_recipient_num" >

    </EditText>

    <MultiAutoCompleteTextView
        android:id="@+id/InputSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtnShareKey"
        android:layout_below="@+id/BtnShareKey"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/input_text_message" />

        <Button
            android:id="@+id/BtnSendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/InputSMS"
            android:layout_toRightOf="@+id/InputSMS"
            android:text="@string/btn_send_sms" />

        <TextView
            android:id="@+id/DebugMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/InputSMS"
            android:layout_below="@+id/BtnSendSMS"
            android:layout_marginTop="26dp"
            android:maxLines="9"
            android:scrollbars="vertical"
            android:text="@string/debug_messages" />

</RelativeLayout>
